--- a/app/views/student_application_form/_fourth_step.erb
+++ b/app/views/student_application_form/_fourth_step.erb
@@ -31,22 +31,26 @@
 		<div class="lang">
 			<div class="field">
 				<div class="flex-container">
-					<input type="text" name="value" class="language-input" disabled="review" value="<%=language.value%>"/>
+					<label for="name">Language</label>
+					<input type="text" name="value" class="language-input" <%=review ? "disabled" : ""%> value="<%=language.value%>"/>
 				</div>
 			</div>
 			<div class="field">
 				<div class="flex-container">
-					<input type="checkbox" name="currently_studying" class="language-input" disabled="review" value="<%=language.currently_studying%>"/>
+					<input type="checkbox" name="currently_studying" class="language-input" <%=review ? "disabled" : ""%> value="<%=language.currently_studying%>"/>
+					<label for="currently_studying">Currently Studying</label>
 				</div>
 			</div>
 			<div class="field">
 				<div class="flex-container">
-					<input type="checkbox" name="able_follow_lectures" class="language-input" disabled="review" value="<%=language.able_follow_lectures%>"/>
+					<input type="checkbox" name="able_follow_lectures" class="language-input" <%=review ? "disabled" : ""%> value="<%=language.able_follow_lectures%>"/>
+					<label for="able_follow_lectures">Able to follow lectures</label>
 				</div>
 			</div>
 			<div class="field">
 				<div class="flex-container">
-					<input type="checkbox" name="able_follow_lectures_extra_preparation" class="language-input" disabled="review" value="<%=language.value%>"/>
+					<input type="checkbox" name="able_follow_lectures_extra_preparation" class="language-input" <%=review ? "disabled" : ""%> value="<%=language.value%>"/>
+					<label for="able_follow_lectures_extra_preparation">Able to follow lectures</label>
 				</div>
 			</div>
 			<button type="button" class="delete-lang-button transparent-button action-button">
