--- a/app/views/student_application_form/_fifth_step.erb
+++ b/app/views/student_application_form/_fifth_step.erb
@@ -4,7 +4,7 @@
 <%end%>
 <p class="intro-paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
-<%= form_for sap, url: student_application_form_path, :html => { :id => "work-form" } , :method => :post do |f| %>
+<div class="edit_student_application_flex">
 
 <div class="other-work" style="display:block; width:100%;">
 <% unless review %>
@@ -49,9 +49,9 @@
 <% end %>
 	</div>
 	</div>
+</div>
 	<% unless review %>
 	<div class="actions">
 	  <%= f.submit "Save current page", label: false, :class => "custom-button", disabled: review %>
 	</div>
 	<%end%>
-<%end%>
