--- a/app/views/student_application_form/_fourth_step.erb
+++ b/app/views/student_application_form/_fourth_step.erb
@@ -3,8 +3,8 @@
 <h3><%=name%></h3>
 <%end%>
 <p class="intro-paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+<div class="edit_student_application_flex">
 
-<%= form_for sap, url: student_application_form_path, :html => { :id => "lang-form" } , :method => :post do |f| %>
 	<div class="field">
 	  <div class="flex-container">
 	    <%= f.label :mother_tongue %><br />
@@ -20,7 +20,7 @@
 	</div>
 	<br/>
 	<br/>
-	<h2>Other languages</h2>
+	<h2 class="block">Other languages</h2>
 	<div class="other-languages" style="display:block; width:100%;">
 	<% unless review %>
 		<button class="custom-button" id="add-lang" type="button">Add a new language</button>
@@ -62,9 +62,9 @@
 	<% end %>
 	</div>
 	</div>
+</div>
 	<% unless review %>
 	<div class="actions">
 	  <%= f.submit "Save current page", label: false, :class => "custom-button", disabled: review %>
 	</div>
 	<%end%>
-<%end%>
