--- a/app/views/student_application_form/review_student_application_form.html.erb
+++ b/app/views/student_application_form/review_student_application_form.html.erb
@@ -1,38 +1,40 @@
-<div class="student-application-form">
-	<h1>Student Application Form <span class="fake-arrow" > > </span>  </h1>
-    <% user = User.find(params[:user]) %> 
-    <%= render partial: "student_application_form/#{toNumeral(params[:step].to_i)}_step", :locals => { :name => "#{user.first_name}   #{user.family_name}", :sap => user.student_application_form, :review => true } %>
-	<!--<%#= @sap.step.to_s + " / 6"%>-->
+<a href="<%="/review_dashboard/#{params[:user]}"%>" class="back-to-dashboard"><button class='custom-button  right'> Back to dashboard</button></a>
 
-    <% completed_steps_array =  user.student_application_form.completed_steps_array %>
-    <% *prefix, last = completed_steps_array %>
-    <% final_steps_array = [*prefix, true, last] %>
-  <div class="actions">
-    <div class="progress-bar">
-        <div class="progress-line">
+<div class="student-application-form">
+    <% user = User.find(params[:user]) %> 
+    	<%= form_for user.student_application_form, url: student_application_form_path, :method => :post do |f| %>
+        <h1>Student Application Form <span class="fake-arrow" > > </span>  </h1>
+        <%= render partial: "student_application_form/#{toNumeral(params[:step].to_i)}_step", :locals => { :f => f, :name => "#{user.first_name}   #{user.family_name}", :sap => user.student_application_form, :review => true } %>
+    	<!--<%#= @sap.step.to_s + " / 6"%>-->
+        <%end%>
+        <% completed_steps_array =  user.student_application_form.completed_steps_array %>
+        <% *prefix, last = completed_steps_array %>
+        <% final_steps_array = [*prefix, true, last] %>
+        <div class="actions">
+            <div class="progress-bar">
+                <div class="progress-line">
+                </div>
+                <% for i in 1..6 do %>
+                    <% classBall = final_steps_array[i-1] ? "done-step" :"todo-step " %>
+                    <%if params[:step].to_i > i %>
+                        <%= link_to "<span class='progress-ball previous-step #{classBall}'></span>".html_safe, "/review_student_application_form/#{params[:user]}" + "/#{i}"%>
+                    <%end%>
+                    <%if params[:step].to_i === i %>
+                        <%= link_to "<span class='progress-ball current-step #{classBall}'></span>".html_safe, "/review_student_application_form/#{params[:user]}" + "/#{i}"%>
+                    <%end%>
+                    <%if params[:step].to_i < i %>
+                        <%= link_to "<span class='progress-ball future-step #{classBall}'></span>".html_safe, "/review_student_application_form/#{params[:user]}" + "/#{i}"%>
+                    <%end%>
+                <% end %>
+            </div>
+        <div class="progress-buttons">
+            <%if params[:step].to_i - 1 > 0 %>
+                <%= link_to "<button  class='custom-button'> < Back</button>".html_safe, "/review_student_application_form/#{params[:user]}" + "/#{params[:step].to_i - 1}"%>
+            <%end%>
+            <%if params[:step].to_i + 1 < 7 %>
+                <%= link_to "<button  class='custom-button'> Next > </button>".html_safe, "/review_student_application_form/#{params[:user]}" + "/#{params[:step].to_i + 1}"%>
+            <%end%>
         </div>
-        <% for i in 1..6 do %>
-            <% classBall = final_steps_array[i-1] ? "done-step" :"todo-step " %>
-            <%if params[:step].to_i > i %>
-                <%= link_to "<span class='progress-ball previous-step #{classBall}'></span>".html_safe, "/review_student_application_form/#{params[:user]}" + "/#{i}"%>
-            <%end%>
-            <%if params[:step].to_i === i %>
-                <%= link_to "<span class='progress-ball current-step #{classBall}'></span>".html_safe, "/review_student_application_form/#{params[:user]}" + "/#{i}"%>
-            <%end%>
-            <%if params[:step].to_i < i %>
-                <%= link_to "<span class='progress-ball future-step #{classBall}'></span>".html_safe, "/review_student_application_form/#{params[:user]}" + "/#{i}"%>
-            <%end%>
-        <% end %>
+        </br>
     </div>
-    <div class="progress-buttons">
-    <%if params[:step].to_i - 1 > 0 %>
-        <%= link_to "<button  class='custom-button'> < Back</button>".html_safe, "/review_student_application_form/#{params[:user]}" + "/#{params[:step].to_i - 1}"%>
-    <%end%>
-    <%if params[:step].to_i + 1 < 7 %>
-        <%= link_to "<button  class='custom-button'> Next > </button>".html_safe, "/review_student_application_form/#{params[:user]}" + "/#{params[:step].to_i + 1}"%>
-    <%end%>
-    </div>
-    </br>
-    <%= link_to "<button class='custom-button back-to-dashboard'> Back </button>".html_safe, "/review_dashboard/#{params[:user]}" %>
-  </div>
 </div>
