--- a/app/views/student_application_form/student_application_form.html.erb
+++ b/app/views/student_application_form/student_application_form.html.erb
@@ -1,11 +1,16 @@
+<a href="<%=user_dashboard_path%>" class="back-to-dashboard"><button class='custom-button  right'> Back to dashboard</button></a>
+
 <div class="student-application-form">
-	<h1>Student Application Form <span class="fake-arrow" > > </span>  </h1>
-	<%= render partial: "student_application_form/#{toNumeral(@sap.step)}_step", :locals =>{ :sap => @sap, :review => false} %>
+    <%= form_for @sap, url: student_application_form_path, :method => :post do |f| %>
+    <h1>Student Application Form <span class="fake-arrow" > > </span>  </h1>
+
+	<%= render partial: "student_application_form/#{toNumeral(@sap.step)}_step", :locals =>{ :f=> f, :sap => @sap, :review => false} %>
+   
 
     <% completed_steps_array =  @sap.completed_steps_array %>
     <% *prefix, last = completed_steps_array %>
     <% final_steps_array = [*prefix, true, last] %>
-  <div class="actions">
+  <div class="action-buttons">
     <div class="progress-bar">
         <div class="progress-line">
         </div>
@@ -23,14 +28,25 @@
         <% end %>
     </div>
     <div class="progress-buttons">
-    <%if @sap.step - 1 > 0 %>
-        <%= link_to "<button class='custom-button'> < Back</button>".html_safe, student_application_form_path + "/#{@sap.step - 1}"%>
-    <%end%>
-    <%if @sap.step + 1 < 7 %>
-        <%= link_to "<button class='custom-button'> Next > </button>".html_safe, student_application_form_path + "/#{@sap.step + 1}"%>
-    <%end%>
+        <%if @sap.step - 1 > 0 %>
+            <a href="<%=student_application_form_path + "/#{@sap.step - 1}"%>">
+                <button class='custom-button'> < Back</button>
+            </a>
+             
+        <%end%>
+        <%if @sap.step + 1 < 7 %>
+            <a href="<%=student_application_form_path + "/#{@sap.step + 1}"%>">
+                <button class='custom-button'> Next ></button>
+            </a>
+        <%end%>
+        <%if @sap.step == 6 %>
+            <a href="<%=student_application_form_path + "/#{@sap.step + 1}"%>">
+                <button class='custom-button'> Next ></button>
+            </a>
+            <%= link_to "<button class='custom-button'> Finish </button>".html_safe, user_dashboard_path%>
+        <%end%>
     </div>
     </br>
-    <%= link_to "<button class='custom-button back-to-dashboard'> Back </button>".html_safe, user_dashboard_path %>
   </div>
+   <%end%>
 </div>
