Add 5th mandatory step. Add submitting function to Next and Back

--- a/app/assets/stylesheets/student_application_form/form.sass
+++ b/app/assets/stylesheets/student_application_form/form.sass
@@ -20,6 +20,11 @@
 			flex-wrap: wrap
 		.other-languages, .other-work
 			padding: 10px
+		.other-work
+			display: block
+			width: 100%
+			&.hidden
+				display: none
 		.field
 			display: inline-block
 			padding: 15px !important
