--- a/app/views/student_application_form/student_application_form.html.erb
+++ b/app/views/student_application_form/student_application_form.html.erb
@@ -5,11 +5,7 @@
     <h1>Student Application Form <span class="fake-arrow" > > </span>  </h1>
 
 	<%= render partial: "student_application_form/#{toNumeral(@sap.step)}_step", :locals =>{ :f=> f, :sap => @sap, :review => false} %>
-   
-
-    <% completed_steps_array =  @sap.completed_steps_array %>
-    <% *prefix, last = completed_steps_array %>
-    <% final_steps_array = [*prefix, true, last] %>
+    <% final_steps_array = @sap.completed_steps_array  %>
   <div class="action-buttons">
     <div class="progress-bar">
         <div class="progress-line">
@@ -29,21 +25,13 @@
     </div>
     <div class="progress-buttons">
         <%if @sap.step - 1 > 0 %>
-            <a href="<%=student_application_form_path + "/#{@sap.step - 1}"%>">
-                <button class='custom-button'> < Back</button>
-            </a>
-             
+                <button type="submit" value="<%=@sap.step - 1%>" name="step"  class='custom-button'> < Back</button>
         <%end%>
         <%if @sap.step + 1 < 7 %>
-            <a href="<%=student_application_form_path + "/#{@sap.step + 1}"%>">
-                <button class='custom-button'> Next ></button>
-            </a>
+                <button type="submit" value="<%=@sap.step + 1%>" name="step"  class='custom-button'> Next ></button>
         <%end%>
         <%if @sap.step == 6 %>
-            <a href="<%=student_application_form_path + "/#{@sap.step + 1}"%>">
-                <button class='custom-button'> Next ></button>
-            </a>
-            <%= link_to "<button class='custom-button'> Finish </button>".html_safe, user_dashboard_path%>
+                <button type="submit" value="0" name="step"  class='custom-button'> Finish</button>
         <%end%>
     </div>
     </br>
