--- a/app/assets/stylesheets/student_application_form/form.sass
+++ b/app/assets/stylesheets/student_application_form/form.sass
@@ -63,3 +63,27 @@
 	display: inline-block
 	width: 100%
 	margin-bottom: -30px
+
+@media (max-width: 800px)
+	.student-application-form
+		h1
+			display: block
+			font-size: 22px
+			font-weight: lighter
+			.fake-arrow
+				padding: 0px 10px
+				font-weight: bold
+				color: $etsit_blue
+				display: none
+		h2.form-subtitle
+			display: inline-block
+			font-size: 22px
+			color: $etsit_blue
+			margin: 0
+		form
+			.field_inst_sending_name
+				width: 100%
+			.field_erasmus_code
+				width: 100%
+			.field_contact_person, .field_inst_telephone, .field_inst_email
+				width: 100%
