--- a/app/assets/stylesheets/buttons.sass
+++ b/app/assets/stylesheets/buttons.sass
@@ -45,3 +45,8 @@
     transition: 0.2s all ease-in
     &:hover
         transform: scale(1.5)    
+.small-button
+    width: 31px 
+    height: 31px 
+    border-radius: 5px
+    border: 2px solid $etsit_blue
