--- a/app/assets/stylesheets/dashboard/dashboard.sass
+++ b/app/assets/stylesheets/dashboard/dashboard.sass
@@ -52,12 +52,14 @@
 				width: 50px
 		.edit-picture
 			position: absolute
-			margin-left: 89px
-			margin-top: 1px
+			margin-left: 88px
+			margin-top: 2px
 			width: 22px
 			height: 22px
 			padding: 0
-			border: none
+			// border: none
+			border-radius: 5px
+			border: 2px solid #4664A2
 			background-color: white
 			i
 				padding: 0
@@ -96,6 +98,8 @@
 				.second-container-right
 					flex-grow: 1
 					text-align: right
+			.student-application-form-progress
+				font-weight: bold
 			.check_mark
 				float: right
 				margin-top: -25px
