--- a/app/assets/stylesheets/general.sass
+++ b/app/assets/stylesheets/general.sass
@@ -2,69 +2,80 @@
 *
 	font-family: 'Source Sans Pro', sans-serif
 
-
-body
-	padding: 0
-	margin: 0
-	a
-		color: inherit
-		text-decoration: none
-	.title
-		color: #4664A2
-		font-size: 24px
-		margin-top: 20px
-		margin-bottom: 10px
-		font-family: inherit
-		font-weight: 500
-		line-height: 1.1
-	.hidden
-		display: none
-	.email
-		color: $etsit-blue
-	.container
-		padding-right: 15px
-		padding-left: 15px
-		margin-right: auto
-		margin-left: auto
-		&.main
-			padding-top: 30px
-		p.intro-paragraph
-			color: #bbb
-		form
-			.field
-				label
-					line-height: 32px
-				input:not([type=submit]), select
-					border-radius: 0
-					border: 1px solid #333
-					height: 22px
-					padding: 5px
-				select
-					height: 34px
-					vertical-align: middle
-				padding: 10px
-				input[type=submit]
-					cursor: pointer
-					
-	@media (min-width: 768px)
+html
+	height: 100%
+	body
+		padding: 0
+		margin: 0
+		min-height: 100%
+		position: relative
+		height: 100%
+		background-color: #f8f8f8
+		a
+			color: inherit
+			text-decoration: none
+		.title
+			color: #4664A2
+			font-size: 24px
+			margin-top:  2px
+			margin-bottom: 10px
+			font-family: inherit
+			font-weight: 500
+			line-height: 1.1
+		.hidden
+			display: none
+		.email
+			color: $etsit-blue
 		.container
-			width: 750px
+			padding-right: 15px
+			padding-left: 15px
+			margin-right: auto
+			margin-left: auto
+			&.main
+				background-color: white
+				padding-top: 30px
+				min-height: calc(100% - 134px)
+			p.intro-paragraph
+				color: #bbb
+			form
+				.field
+					label
+						line-height: 32px
+					input:not([type=submit]), select
+						border-radius: 0
+						border: 1px solid #333
+						height: 22px
+						padding: 5px
+					select
+						height: 34px
+						vertical-align: middle
+					padding: 10px
+					input[type=submit]
+						cursor: pointer
+						
+		@media (min-width: 768px)
+			.container
+				width: 750px
 
-	@media (min-width: 992px)
-		.container
-			width: 970px
+		@media (min-width: 992px)
+			.container
+				width: 970px
 
-	@media (min-width: 1200px)
-		.container
-			width: 1170px
-	input[type=checkbox]
-		vertical-align: middle
-	a.underline
-		color: $etsit-blue
-		&:hover
-			text-decoration: underline
-	.no-results
-		color: $etsit-blue
-		text-align: center
-		background-color: #f7f7f7
-		padding: 10px		
+		@media (min-width: 1200px)
+			.container
+				width: 1170px
+		input[type=checkbox]
+			vertical-align: middle
+		a.underline
+			color: $etsit-blue
+			&:hover
+				text-decoration: underline
+		.no-results
+			color: $etsit-blue
+			text-align: center
+			background-color: #f7f7f7
+			padding: 10px		
+		.align-right
+			text-align: right
+		form.inline
+			display: inline-block
