--- a/app/views/users/review_dashboard.html.erb
+++ b/app/views/users/review_dashboard.html.erb
@@ -1,139 +1,149 @@
-<%= button_to "Log out", destroy_user_session_path, :method=> :delete, :class => "custom-button right"%>
-<%= button_to "Back to Dashboard", admin_dashboard_path, :method=> :get, :class => "custom-button right"%>
-
 <% unless User.exists?(id: params[:user], role: "user")  %>
-	<br/><br/>
-	<p class="no-results">The selected user does not exist</p>
-	<%else%>
-	<% admin = current_user %>
-	<% current_user = User.find(params[:user]) %>
-	<h1 class="title"> You are reviewing <%= current_user.first_name %>'s application</h1>
+<div class="align-right">
+	<%= button_to "Dashboard", admin_dashboard_path, :method=> :get, :class => "custom-button",:form_class =>"inline"%>
+	<%= button_to "Log out", destroy_user_session_path, :method=> :delete, :class => "custom-button", :form_class =>"inline"%>
+</div>
+<br/><br/>
+<p class="no-results">The selected user does not exist</p>
+<%else%>
+<% admin = current_user %>
+<% current_user = User.find(params[:user]) %>
+<div class="align-right">
+	<%= button_to "User Contact", "mailto:"+current_user.email , :method=> :get, :class => "custom-button",:form_class =>"inline"%>
+	<%= button_to "Dashboard", admin_dashboard_path, :method=> :get, :class => "custom-button",:form_class =>"inline"%>
+	<%= button_to "Log out", destroy_user_session_path, :method=> :delete, :class => "custom-button", :form_class =>"inline"%>
+</div>
 
-	<p class="intro-paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-	<br/>
-	<div class="dashboard-container">
-		<div class="left-column">
-			<div class="picture-container"> 
+
+<h1 class="title"> You are reviewing <%= current_user.first_name %>'s application</h1>
+
+<p class="intro-paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+<br/>
+<div class="dashboard-container">
+	<div class="left-column">
+		<div class="picture-container"> 
 			<img class="picture tiny" src="<%=admin.photo %>"/>
-	 		<p><%= admin.first_name.blank? ? "Administrator" : (admin.first_name + " " + admin.family_name) %></p>
-	 		</div>
-	 		<div class="picture-container"> 	
-			<img class="picture" src="<%=current_user.photo %>"/>
-	 		<p><%= current_user.first_name %> <%= current_user.family_name %></p>
-	 		</div>
+			<p><%= admin.first_name.blank? ? "Administrator" : (admin.first_name + " " + admin.family_name) %></p>
 		</div>
-		<div class="right-column">
-			<div class="row">
-				<div class="second-container">
-					<span class="second-container-left dashboard-section" id="application-form-tab">
-						<label> 
-							Application Form<i class="caret mdi mdi-menu-down no-reverse"></i>
-						</label>
-					</span>
-					<div class="second-container-medium">
-						<div class="progress-bar">
-							<div class="progress-line">
-							</div>
+		<div class="picture-container"> 	
+			<img class="picture" src="<%=current_user.photo %>"/>
+			<p><%= current_user.first_name %> <%= current_user.family_name %></p>
+		</div>
+	</div>
+	<div class="right-column">
+		<div class="row">
+			<div class="second-container">
+				<span class="second-container-left dashboard-section" id="application-form-tab">
+					<label> 
+						Application Form<i class="caret mdi mdi-menu-down no-reverse"></i>
+					</label>
+				</span>
+				<div class="second-container-medium">
+					<div class="progress-bar">
+						<div class="progress-line">
+						</div>
+						<div class="progress-balls">
 							<% final_steps_array = current_user.student_application_form.completed_steps_array %>
 							<% titles = ["Sending Institution", "Purpose of stay", "Study year", "Language Competence", "Work Experience", "Previous and current studies"] %>
 							<% for i in 1..6 do %>
-								<% classBall = final_steps_array[i-1] ? "done-step" : "todo-step" %>
-								<% ball = "<span class='progress-ball  #{classBall}'></span>"%>
-								<%= link_to ball.html_safe, "/review_student_application_form/#{current_user.id}" + "/#{i}", :title => titles[i-1] %>
+							<% classBall = final_steps_array[i-1] ? "done-step" : "todo-step" %>
+							<% ball = "<span class='progress-ball  #{classBall}'></span>"%>
+							<%= link_to ball.html_safe, "/review_student_application_form/#{current_user.id}" + "/#{i}", :title => titles[i-1] %>
 							<% end %>
 						</div>
 					</div>
-					<div class="second-container-right">
-						<span class="student-application-form-progress"><%=current_user.student_application_form.completed_percentage%></span>
-						<%if current_user.student_application_form.completed_percentage === '100%'%>
-							<span class="check_mark" style="float: none;"><i class="mdi mdi-check green"></i></span>
-						<%end%>
-					</div>
 				</div>
-				<div class="collapsible big">
-					<p class="intro-paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-					<div class="align-right">
-						<a href="<%="/generate_pdf/#{current_user.id}"%>"><button class="custom-button">Download</button></a>
-						<a href="<%="/review_student_application_form/#{current_user.id}/1"%>"><button class="custom-button" >Review data</button></a>
-
-					</div>
-
+				<div class="second-container-right">
+					<span class="student-application-form-progress"><%=current_user.student_application_form.completed_percentage%></span>
+					<%if current_user.student_application_form.completed_percentage === '100%'%>
+					<span class="check_mark" style="float: none;"><i class="mdi mdi-check green"></i></span>
+					<%end%>
 				</div>
 			</div>
-			<%= render partial: "users/user_dashboard_panel", :locals => {
-				:admin => true,
-				:name => :motivation_letter, 
-				:content => current_user.motivation_letter, 
-				:file_name => current_user.motivation_letter_file_name, 
-				:label => "Motivation Letter" } %>
+			<div class="collapsible big">
+				<p class="intro-paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+				<div class="align-right">
+					<a href="<%="/generate_pdf/#{current_user.id}"%>"><button class="custom-button">Download</button></a>
+					<a href="<%="/review_student_application_form/#{current_user.id}/1"%>"><button class="custom-button" >Review data</button></a>
+
+				</div>
+
+			</div>
+		</div>
+		<%= render partial: "users/user_dashboard_panel", :locals => {
+			:admin => true,
+			:name => :motivation_letter, 
+			:content => current_user.motivation_letter, 
+			:file_name => current_user.motivation_letter_file_name, 
+			:label => "Motivation Letter" } %>
 			<%= render partial: "users/user_dashboard_panel", :locals => {
 				:admin => true,
 				:name => :curriculum_vitae, 
 				:content => current_user.curriculum_vitae, 
 				:file_name => current_user.curriculum_vitae_file_name, 
 				:label => "Curriculum Vitae"}  %>
-			<%= render partial: "users/user_dashboard_panel", :locals => {
-				:admin => true,
-				:name => :transcript_of_records, 
-				:content => current_user.transcript_of_records, 
-				:file_name => current_user.transcript_of_records_file_name, 
-				:label => "Transcript of Records"}  %>
-			<%= render partial: "users/user_dashboard_panel", :locals => {
-				:admin => true,
-				:name => :learning_agreement, 
-				:content => current_user.learning_agreement, 
-				:file_name => current_user.learning_agreement_file_name, 
-				:label => "Learning Agreement"}  %>
-			<%= render partial: "users/user_dashboard_panel", :locals => {
-				:admin => true,
-				:name => :valid_insurance_policy, 
-				:content => current_user.valid_insurance_policy, 
-				:file_name => current_user.valid_insurance_policy_file_name, 
-				:label => "Valid Insurance Policy"}  %>
-			<%= render partial: "users/user_dashboard_panel", :locals => {
-				:admin => true,
-				:name => :ni_passport, 
-				:content => current_user.ni_passport, 
-				:file_name => current_user.ni_passport_file_name, 
-				:label => "NI Passport"}  %>
+				<%= render partial: "users/user_dashboard_panel", :locals => {
+					:admin => true,
+					:name => :transcript_of_records, 
+					:content => current_user.transcript_of_records, 
+					:file_name => current_user.transcript_of_records_file_name, 
+					:label => "Transcript of Records"}  %>
+					<%= render partial: "users/user_dashboard_panel", :locals => {
+						:admin => true,
+						:name => :learning_agreement, 
+						:content => current_user.learning_agreement, 
+						:file_name => current_user.learning_agreement_file_name, 
+						:label => "Learning Agreement"}  %>
+						<%= render partial: "users/user_dashboard_panel", :locals => {
+							:admin => true,
+							:name => :valid_insurance_policy, 
+							:content => current_user.valid_insurance_policy, 
+							:file_name => current_user.valid_insurance_policy_file_name, 
+							:label => "Valid Insurance Policy"}  %>
+							<%= render partial: "users/user_dashboard_panel", :locals => {
+								:admin => true,
+								:name => :ni_passport, 
+								:content => current_user.ni_passport, 
+								:file_name => current_user.ni_passport_file_name, 
+								:label => "NI Passport"}  %>
 
-			<div class="row">
-				<label>
-					Seeking degree  
-				</label>
-			<label class="switch">
-			  <input id="seekingDegreeCheckbox" type="checkbox">
-			  <span class="slider round"></span>
-			</label>
+								<div class="row">
+									<label>
+										Seeking degree  
+									</label>
+									<label class="switch">
+										<input id="seekingDegreeCheckbox" type="checkbox">
+										<span class="slider round"></span>
+									</label>
 
-			</div>
-			<div id="degree-seeking" class="hidden">
-				<%= render partial: "users/user_dashboard_panel", :locals => {
-					:admin => true,
-					:name => :recommendation_letter_1, 
-					:content => current_user.recommendation_letter_1, 
-					:file_name => current_user.recommendation_letter_1_file_name, 
-					:label => "Recommendation letter 1"}  %>
-				<%= render partial: "users/user_dashboard_panel", :locals => {
-					:admin => true,
-					:name => :recommendation_letter_2, 
-					:content => current_user.recommendation_letter_2, 
-					:file_name => current_user.recommendation_letter_2_file_name, 
-					:label => "Recommendation letter 2"}  %>
-				<%= render partial: "users/user_dashboard_panel", :locals => {
-					:admin => true,
-					:name => :official_gpa, 
-					:content => current_user.official_gpa, 
-					:file_name => current_user.official_gpa_file_name, 
-					:label => "Official GPA"}  %>
-				<%= render partial: "users/user_dashboard_panel", :locals => {
-					:admin => true,
-					:name => :english_test_score, 
-					:content => current_user.english_test_score, 
-					:file_name => current_user.english_test_score_file_name,
-					:label => "English Test Score"}  %>
-				</div>
-			</div>
-	 
+								</div>
+								<div id="degree-seeking" class="hidden">
+									<%= render partial: "users/user_dashboard_panel", :locals => {
+										:admin => true,
+										:name => :recommendation_letter_1, 
+										:content => current_user.recommendation_letter_1, 
+										:file_name => current_user.recommendation_letter_1_file_name, 
+										:label => "Recommendation letter 1"}  %>
+										<%= render partial: "users/user_dashboard_panel", :locals => {
+											:admin => true,
+											:name => :recommendation_letter_2, 
+											:content => current_user.recommendation_letter_2, 
+											:file_name => current_user.recommendation_letter_2_file_name, 
+											:label => "Recommendation letter 2"}  %>
+											<%= render partial: "users/user_dashboard_panel", :locals => {
+												:admin => true,
+												:name => :official_gpa, 
+												:content => current_user.official_gpa, 
+												:file_name => current_user.official_gpa_file_name, 
+												:label => "Official GPA"}  %>
+												<%= render partial: "users/user_dashboard_panel", :locals => {
+													:admin => true,
+													:name => :english_test_score, 
+													:content => current_user.english_test_score, 
+													:file_name => current_user.english_test_score_file_name,
+													:label => "English Test Score"}  %>
+												</div>
+											</div>
 
-<%end%>
+
+											<%end%>
