--- a/app/assets/stylesheets/general.sass
+++ b/app/assets/stylesheets/general.sass
@@ -35,6 +35,8 @@ html
 				background-color: white
 				padding-top: 30px
 				min-height: calc(100% - 134px)
+				padding-left: 35px
+				padding-right: 35px
 			p.intro-paragraph
 				color: #bbb
 			form
