--- a/app/assets/stylesheets/dashboard/admin-dashboard.sass
+++ b/app/assets/stylesheets/dashboard/admin-dashboard.sass
@@ -68,16 +68,18 @@
 			// flex-grow: 3
 		.flex-table-univ
 			//order: 2
-			width: 20%
+			width: 19%
 			// flex-grow: 3
 		.flex-table-period
 			//order: 3
 			width: 10%
 			// flex-grow: 1
 		.flex-table-app-form
-			width: 6%
+			width: 7%
 			//order: 4
 			// flex-grow: 1
+			a
+				display: flex
 		.flex-table-mot-letter
 			width: 6%
 			// order: 5
@@ -95,7 +97,8 @@
 			//order: 8
 			// flex-grow: 1
 		.flex-table-pctg
-			width: 4%
+			width: 5%
+			font-weight: bold
 			//order: 9
 			// flex-grow: 1
 		.flex-table-status
