--- a/app/views/users/user_dashboard.html.erb
+++ b/app/views/users/user_dashboard.html.erb
@@ -56,7 +56,7 @@
 				<%if finish_app_form %>
 					<div class="align-right">
 						<div class="file-name">
-							<%= form.file_field "a" %>
+							<%= form.file_field :signed_student_application_form %>
 						</div>
 					</div>
 					<% end %>
